Updated frontend features and fixes

--- a/html/forgot.html
+++ b/html/forgot.html
@@ -12,7 +12,10 @@
         <h1>Forgot Password</h1>
         <form id="forgotForm">
             <input type="email" id="email" placeholder="Enter your email" required>
-            <button type="submit">Send Password Reset Link</button>
+            <button type="submit">
+                <span class="spinner"></span>
+                <span class="button-text">Send Password Reset Link</span>
+            </button>
         </form>
     </div>
     <script src="JS/forgot.js"></script> 
