--- a/html/hom.html
+++ b/html/hom.html
@@ -26,7 +26,10 @@
                 <input type="text" id="title" name="title" placeholder="Title" required>
                 <textarea id="content" name="body" placeholder="Content" required></textarea>
                 <input type="file" id="postMedia" name="postMedia">
-                <button type="submit">Create</button>
+                <button type="submit">
+                    <span class="spinner"></span>
+                    <span class="button-text">Create</span>
+                </button>
             </form>
         </section>
 
