--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,10 @@
             <input type="email" id="email" placeholder="Email" required>
             <input type="password" id="password" placeholder="Password" required>
             <input type="password" id="confirmPassword" placeholder="Confirm Password" required>
-            <button type="submit">Sign Up</button>
+            <button type="submit">
+                <span class="spinner"></span>
+                <span class="button-text">Sign Up</span>
+            </button>
         </form>
         <p>
             Already have an account? <a href="signin.html">Sign In</a>
