--- a/html/reset.html
+++ b/html/reset.html
@@ -13,7 +13,10 @@
         <form id="resetForm">
             <input type="password" id="newPassword" placeholder="New Password" required>
             <input type="password" id="confirmPassword" placeholder="Confirm New Password" required>
-            <button type="submit">Reset Password</button>
+            <button type="submit">
+                <span class="spinner"></span>
+                <span class="button-text">Reset Password</span>
+            </button>
         </form>
     </div>
     <script src="JS/reset.js"></script>
