--- a/html/signin.html
+++ b/html/signin.html
@@ -13,13 +13,16 @@
         <form id="signin-form">
             <input type="email" id="email" placeholder="Email" required>
             <input type="password" id="pass" placeholder="Password" required>
-            <button type="submit">Sign In</button>
+            <button type="submit">
+                <span class="spinner"></span>
+                <span class="button-text">Sign In</span>
+            </button>
         </form>
         <p>
             <a href="./forgot.html">Forgot Password?</a>
         </p>
         <p>
-            Don't have an account? <a href="./index.html">Sign Up</a>
+            Don't have an account? <a href="./signup.html">Sign Up</a>
         </p>
     </div>
     <script src="JS/signin.js"></script>
