--- a/html/hom.html
+++ b/html/hom.html
@@ -26,6 +26,9 @@
                 <input type="text" id="title" name="title" placeholder="Title" required>
                 <textarea id="content" name="body" placeholder="Content" required></textarea>
                 <input type="file" id="postMedia" name="postMedia">
+                <div id="progress-container" class="progress-container hidden">
+            <div class="progress-bar" id="progress-bar">0%</div>
+        </div>
                 <button type="submit">
                     <span class="spinner"></span>
                     <span class="button-text">Create</span>
