--- a/html/hom.html
+++ b/html/hom.html
@@ -27,8 +27,9 @@
                 <textarea id="content" name="body" placeholder="Content" required></textarea>
                 <input type="file" id="postMedia" name="postMedia">
                 <div id="progress-container" class="progress-container hidden">
-            <div class="progress-bar" id="progress-bar">0%</div>
-        </div>
+                <div class="progress-bar" id="progress-bar">0%</div>
+                <button type="button" id="cancel-upload-btn" class="cancel-btn">Cancel</button>
+                </div>
                 <button type="submit">
                     <span class="spinner"></span>
                     <span class="button-text">Create</span>
