--- a/html/hom.html
+++ b/html/hom.html
@@ -18,6 +18,9 @@
         <section id="home-section">
             <h2>All Posts</h2>
             <div id="posts-container"></div>
+            <div id="posts-loader">
+            <p>Loading posts...</p>
+        </div>
         </section>
 
         <section id="create-section" class="hidden">
