--- a/html/signin.html
+++ b/html/signin.html
@@ -22,7 +22,7 @@
             <a href="./forgot.html">Forgot Password?</a>
         </p>
         <p>
-            Don't have an account? <a href="./signup.html">Sign Up</a>
+            Don't have an account? <a href="./index.html">Sign Up</a>
         </p>
     </div>
     <script src="JS/signin.js"></script>
